--- a/location.html
+++ b/location.html
@@ -21,9 +21,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   </head>
-  <body
-    class="bg-gradient-to-br from-yellow-50 to-red-100 font-[Poppins] h-[100vh]"
-  >
+  <body class="bg-gradient-to-br from-yellow-50 to-red-100 font-[Poppins]">
     <nav
       class="bg-white/90 backdrop-blur-md shadow-md fixed w-full z-50 sm:top-0"
     >
@@ -122,7 +120,7 @@
           >
             <i class="fas fa-map-marker-alt"></i><span>Location</span>
           </li>
-          <li
+          <!-- <li
             onclick="window.location.href='profile.html'"
             class="flex items-center space-x-3 hover:text-red-600 cursor-pointer transition transform hover:translate-x-1"
           >
@@ -144,14 +142,12 @@
             >
               Logout
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
 
-    <section
-      class="bg-red-50 py-16 px-6 md:px-12 font-[Poppins] relative top-[20vh]"
-    >
+    <section class="bg-red-50 py-16 px-6 md:px-12 font-[Poppins] pt-24">
       <div class="max-w-6xl mx-auto grid gap-8 md:grid-cols-2 items-center">
         <div id="">
           <h2 class="text-4xl font-bold text-red-700 mb-4">Contact Us 📍</h2>
@@ -170,9 +166,8 @@
             Noor Masjid, Karachi, Pakistan
           </p>
         </div>
-        <div
-          class="relative rounded-2xl overflow-hidden shadow-2xl border border-gray-200 bg-gradient-to-br from-yellow-50 to-red-100 p-6 flex flex-col justify-between"
-        >
+    <div class="relative rounded-2xl overflow-hidden shadow-2xl border border-gray-200 bg-gradient-to-br from-yellow-50 to-red-100 p-6 flex flex-col justify-between text-center sm:text-left">
+
           <div class="direction-box text-black">
             <p class="font-bold text-2xl mb-3">Shazz Pizzeria</p>
             <p class="text-gray-700 leading-relaxed">
@@ -190,40 +185,39 @@
         </div>
       </div>
     </section>
-  <footer class="bg-gray-900 text-gray-300 font-[Poppins] w-full">
-  <div class="max-w-7xl mx-auto grid gap-8 md:grid-cols-3 px-6 py-10">
-    <!-- About -->
+
+<footer class="bg-gray-900 text-gray-300 font-[Poppins] w-full  ">
+  <div class="max-w-7xl mx-auto px-6 py-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center sm:text-left">
+    
     <div>
       <h3 class="text-xl font-bold mb-4 text-white">Shazz Pizzeria</h3>
       <p class="text-gray-400">
-        Serving happiness one slice at a time since 2020.
+        “Crafting joy, one perfect slice since 2025.”
       </p>
     </div>
 
-    <!-- Quick Links -->
     <div>
       <h3 class="text-xl font-bold mb-4 text-white">Quick Links</h3>
       <ul class="space-y-2">
-        <li><a href="#menu" class="hover:text-yellow-400 transition">Menu</a></li>
-        <li><a href="#offers" class="hover:text-yellow-400 transition">Special Offers</a></li>
-        <li><a href="#contact" class="hover:text-yellow-400 transition">Contact</a></li>
+        <li><a href="menu.html" class="hover:text-yellow-400 transition">Menu</a></li>
+        <li><a href="offers.html" class="hover:text-yellow-400 transition">Special Offers</a></li>
+        <li><a href="contact.html" class="hover:text-yellow-400 transition">Contact</a></li>
       </ul>
     </div>
 
-    <!-- Social Links -->
-    <div class="text-center md:text-left">
+    <div>
       <h3 class="text-xl font-bold mb-4 text-white">Follow Us</h3>
-      <div class="flex justify-center md:justify-start space-x-6 text-2xl">
+      <div class="flex justify-center sm:justify-start space-x-6 text-2xl">
         <a href="https://www.facebook.com/profile.php?id=61577740163286" target="_blank" class="text-gray-400 hover:text-blue-500 transition"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/shazzpizzeria" target="_blank" class="text-gray-400 hover:text-pink-500 transition"><i class="fab fa-instagram"></i></a>
         <a href="https://wa.me/923107225999" target="_blank" class="text-gray-400 hover:text-green-500 transition"><i class="fab fa-whatsapp"></i></a>
         <a href="https://www.tiktok.com/@shazz.pizzeria3?" target="_blank" class="text-gray-400 hover:text-white transition"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
+
   </div>
 
-  <!-- Bottom -->
-  <div class="text-center text-gray-500 py-4 border-t border-gray-700 text-sm">
+  <div class="w-full text-center text-gray-500 py-4 border-t border-gray-700 text-sm">
     © 2025 Shazz Pizzeria. All Rights Reserved.
   </div>
 </footer>
