--- a/menu.html
+++ b/menu.html
@@ -121,7 +121,7 @@
           >
             <i class="fas fa-map-marker-alt"></i><span>Location</span>
           </li>
-          <li
+          <!-- <li
             onclick="window.location.href='profile.html'"
             class="flex items-center space-x-3 hover:text-red-600 cursor-pointer transition transform hover:translate-x-1"
           >
@@ -143,33 +143,12 @@
             >
               Logout
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
-    <div class="flex flex-wrap justify-center gap-4 relative top-40">
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/PlainFries.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Plain Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">RS <span> 200</span> </p>
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
+    <div class="flex flex-wrap justify-center gap-4 relative top-20">
+
       <div
         class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
       >
@@ -195,204 +174,7 @@
           </button>
         </div>
       </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Lav Pizza
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
-      <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
-      >
-        <a href="#">
-          <img class="rounded-t-lg" src="./Images/crownCrust.jpg" alt="Pizza" />
-        </a>
-        <div class="p-5">
-          <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">
-            Pizza Fries
-          </h5>
-          <p class="mb-3 text-gray-700 dark:text-gray-400">
-            Delicious pizza with special toppings.
-          </p>
-
-          <button
-            class="add-to-cart inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-br from-red-500 to-yellow-500 rounded-lg shadow-lg hover:from-yellow-500 hover:to-red-500 focus:outline-none focus:ring-2 focus:ring-red-400"
-            data-name="lava Pizza"
-            data-price="899"
-            data-qty-input="qty-crown"
-          >
-            Add To Cart
-            <i class="fas fa-shopping-cart ml-2"></i>
-          </button>
-        </div>
-      </div>
+    
       <div
         class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
       >
@@ -524,66 +306,44 @@
       <div id="item-carts"></div>
     </div>
 
-    <footer
-      class="bg-gradient-to-br from-yellow-50 to-red-100 font-[Poppins] text-black"
-    >
-      <div class="max-w-6xl mx-auto grid gap-8 md:grid-cols-3 px-6">
-        <div>
-          <h3 class="text-xl font-bold mb-4">Shazz Pizzeria</h3>
-          <p class="ttext-black">
-            Serving happiness one slice at a time since 2020.
-          </p>
-        </div>
 
-        <div>
-          <h3 class="text-xl font-bold mb-4">Quick Links</h3>
-          <ul class="space-y-2 text-black">
-            <li><a href="#menu">Menu</a></li>
-            <li>
-              <a href="#offers">Special Offers</a>
-            </li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
+<footer class="bg-gray-900 text-gray-300 font-[Poppins] w-full  z-10 mt-40">
+  <div class="max-w-7xl mx-auto px-6 py-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center sm:text-left">
+    
+    <div>
+      <h3 class="text-xl font-bold mb-4 text-white">Shazz Pizzeria</h3>
+      <p class="text-gray-400">
+        “Crafting joy, one perfect slice since 2025.”
+      </p>
+    </div>
 
-        <div class="text-center">
-          <h3 class="text-xl font-bold mb-4">Follow Us</h3>
-          <div class="flex justify-center space-x-6 text-2xl">
-            <a
-              href="https://www.facebook.com/profile.php?id=61577740163286"
-              target="_blank"
-              class="text-gray-400 hover:text-blue-500 transition"
-            >
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a
-              href="https://www.instagram.com/shazzpizzeria"
-              target="_blank"
-              class="text-gray-400 hover:text-pink-500 transition"
-            >
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a
-              href="https://wa.me/923107225999"
-              target="_blank"
-              class="text-gray-400 hover:text-green-500 transition"
-            >
-              <i class="fab fa-whatsapp"></i>
-            </a>
-            <a
-              href="https://www.tiktok.com/@shazz.pizzeria3?"
-              target="_blank"
-              class="text-gray-400 hover:text-black transition"
-            >
-              <i class="fab fa-tiktok"></i>
-            </a>
-          </div>
-        </div>
+    <div>
+      <h3 class="text-xl font-bold mb-4 text-white">Quick Links</h3>
+      <ul class="space-y-2">
+        <li><a href="menu.html" class="hover:text-yellow-400 transition">Menu</a></li>
+        <li><a href="offers.html" class="hover:text-yellow-400 transition">Special Offers</a></li>
+        <li><a href="contact.html" class="hover:text-yellow-400 transition">Contact</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3 class="text-xl font-bold mb-4 text-white">Follow Us</h3>
+      <div class="flex justify-center sm:justify-start space-x-6 text-2xl">
+        <a href="https://www.facebook.com/profile.php?id=61577740163286" target="_blank" class="text-gray-400 hover:text-blue-500 transition"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/shazzpizzeria" target="_blank" class="text-gray-400 hover:text-pink-500 transition"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/923107225999" target="_blank" class="text-gray-400 hover:text-green-500 transition"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.tiktok.com/@shazz.pizzeria3?" target="_blank" class="text-gray-400 hover:text-white transition"><i class="fab fa-tiktok"></i></a>
       </div>
-      <div class="text-center text-black mt-8 text-sm">
-        © 2025 Shazz Pizzeria. All Rights Reserved.
-      </div>
-    </footer>
+    </div>
+
+  </div>
+
+  <div class="w-full text-center text-gray-500 py-4 border-t border-gray-700 text-sm">
+    © 2025 Shazz Pizzeria. All Rights Reserved.
+  </div>
+</footer>
+
+
     <script src="app.js"></script>
   </body>
 </html>
